--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 </div>
             </div>
         </div>
-        <a class="button" href="">Donate</a>
+        <div class="donate button">
+            <a class="other" href="">Other amount value</a>
+        <button><a class="button" href="">Donate</a>-</button>
+        </div>
         <section class="area">
             <div class="flex">
                 <div id="food" class="item">
@@ -83,6 +86,14 @@
     <div class="select">
         <h1>Get my updates</h1>
         <h2>Donate for causes like Health, Educations or Social Good on India's most trusted platform. Your donation can provide medical aid, hospital expenses & recovery assistance to needy.</h2>
+    </div>
+    <div class="subscribe-type">
+        <div class="subscribe">
+            <div class="item">
+                <input type="email" class="email" placeholder="Enter your email">
+                <input type="submit" class="subcribe" class=" subcribe">
+            </div>
+        </div>
     </div>
 </section>
 </body>
