--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
         <h1>Get my updates</h1>
         <h2>Donate for causes like Health, Educations or Social Good on India's most trusted platform. Your donation can provide medical aid, hospital expenses & recovery assistance to needy.</h2>
     </div>
-    <div class="subscribe-type">
-        <div class="subscribe">
-            <div class="item">
-                <input type="email" class="email" placeholder="Enter your email">
-                <input type="submit" class="subcribe" class=" subcribe">
-            </div>
-        </div>
+    <div class="box">
+        <form>
+            input type="Email" palceholder="Email">
+            <input type="submit" name="submit">
+        </form>
+
     </div>
 </section>
 </body>
